code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.4 (Medium)                                                   |
 |   + Choose the language model used for new completions.                                        |
 |                           +----------------------------------------+                           |
 |   Theme              Theme|Settings Overview                       |                           |
 |   + Switch between preset |                                        |                           |
 |                           |• ↑/↓  Move between sections            |                           |
 |   Updates            Auto |• Enter  Open selected section          |                           |
 |   + Control CLI auto-updat|• Tab    Jump forward between sections  |                           |
 |                           |• Esc    Close settings                 |                           |
 |   ------------------------|• ?      Toggle this help               |-------------------------- |
 |                           |                                        |                           |
 |   Accounts           Auto-|Press Esc to close                      |                           |
 |   + Configure account swit+----------------------------------------+.                          |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
