code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2494
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.4                                              | |
 |    Accounts           |  Reasoning effort: Medium                                            | |
 |    Agents             |                                                                      | |
 |    Prompts            |  Mode Settings                                                       | |
 |    Memories           |  Fast mode speeds up replies. 1M Context is available on supported m | |
 |    Skills             |  › Fast Mode: disabled                                               | |
 |    Auto Drive         |    1M Context: auto                                                  | |
 |    Review             |  Press Enter to cycle Disabled, Enabled, and Auto.                   | |
 |    Planning           |                                                                      | |
 |    Validation         |  ↑↓ Navigate  Enter Select  Esc Cancel                               | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
