code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2525
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Curren+------------------------------+                              | |
 |    Accounts           |  Reason|Model Shortcuts               |                              | |
 |    Agents             |        |                              |                              | |
 |    Prompts            |  Mode S|• Esc    Return to overview   |                              | |
 |    Memories           |  Fast m|• Tab    Cycle sections       | Context is available on supp | |
 |    Skills             |  › Fast|• Shift+Tab  Cycle backwards  |                              | |
 |    Auto Drive         |    1M C|• ?      Toggle this help     |                              | |
 |    Review             |  Press |                              |, and Auto.                   | |
 |    Planning           |        |Press Esc to close            |                              | |
 |    Validation         |  ↑↓ Nav+------------------------------+                              | |
 |    Chrome             |                                                                      | |
 |  ↓ MCP                +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
